# fastapi-clean-backend-template

./: .gitignore  docker-compose.yml
backend/: .editorconfig  .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  app.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/auth/: __init__.py  auth_context.py  cookies.py  csrf.py  dependencies.py  exceptions.py  identity_mapper.py  jwks_client.py  jwt_verifier.py  pkce.py  routes.py  scopes.py  session_repository.py  session_tokens.py  supabase_auth_client.py  token_cipher.py
backend/app/authorization/: __init__.py  authorization_service.py  casbin_enforcer.py  casbin_model.conf  permission_actions.py  policy.csv  resource_context.py
backend/app/bootstrap/: __init__.py  container.py  factories.py  lifespan.py
backend/app/core/: __init__.py  config.py  constants.py  context.py  enums.py  pagination.py  responses.py
backend/app/db/: __init__.py  connection.py  dto_base.py  errors.py  transaction_manager.py
backend/app/infrastructure/: __init__.py
backend/app/modules/: __init__.py
backend/app/rate_limiting/: __init__.py  backend.py  client_ip.py  dependency.py  keys.py  limiter.py  rules.py
backend/app/shared/: __init__.py  sentinels.py  types.py
backend/tests/: conftest.py
backend/tests/api/: test_auth_routes.py  test_health_routes.py
backend/tests/authz/: conftest.py  test_rate_limit_dependency.py  test_route_scope_gate.py  test_service_enforcement.py
database/: README.md
(+167 files in other folders)
